<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/add_bank_card_bg"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15">

        <ImageView
            android:id="@+id/imageview_center_head"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:background="@mipmap/head_default"
            android:drawableLeft="@mipmap/pic_screen"
            android:gravity="center_vertical"
            android:scaleType="centerCrop"
            android:textSize="@dimen/sp_16" />

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_center_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ellipsize="none"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@color/color_base_text"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/textview_center_desc"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ellipsize="none"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <Button
            android:id="@+id/button_set_head"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_button_circle"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="设置头像"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_25"
        android:background="@color/color_itegral_diviler" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_application_layout_dark" />


    <LinearLayout
        android:id="@+id/linearlayout_setting"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_39"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_9"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_9">

        <ImageView
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@mipmap/setting" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/text_personal_center_setting"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="6"
            android:background="@null"
            android:ellipsize="none"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:src="@mipmap/arraw_right" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_53"
        android:background="@color/color_application_layout_dark" />

    <LinearLayout
        android:id="@+id/linearlayout_transfer_manager"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_39"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_9"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_9">

        <ImageView
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@mipmap/account_manager" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/text_personal_center_account_manager"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="6"
            android:background="@null"
            android:ellipsize="none"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arraw_right" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_53"
        android:background="@color/color_application_layout_dark" />

    <LinearLayout
        android:id="@+id/linearlayout_account_mamager"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_39"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_9"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_9">

        <ImageView
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@mipmap/account_center" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/text_personal_center_account_center"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="6"
            android:background="@null"
            android:ellipsize="none"
            android:gravity="center_vertical"

            android:singleLine="true"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arraw_right" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_53"
        android:background="@color/color_application_layout_dark" />

    <LinearLayout
        android:id="@+id/linearlayout_friend_manager"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_39"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_9"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_9">

        <ImageView
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@mipmap/friend_manager" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/text_personal_center_friend_manager"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="6"
            android:background="@null"
            android:ellipsize="none"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arraw_right" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_53"
        android:background="@color/color_application_layout_dark" />

    <LinearLayout
        android:id="@+id/linearlayout_safe_center"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_39"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_9"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_9">

        <ImageView
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@mipmap/security_center" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/text_personal_center_safe"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="6"
            android:background="@null"
            android:ellipsize="none"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arraw_right" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_53"
        android:background="@color/color_applocation_navigation_text" />

    <LinearLayout
        android:id="@+id/linearlayout_personal_info"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_39"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_9"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_9">

        <ImageView
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@mipmap/personal" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/text_personal_center_info"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="6"
            android:background="@null"
            android:ellipsize="none"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:src="@mipmap/arraw_right" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_application_layout_dark" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_53"
        android:background="@color/color_applocation_navigation_text" />

    <LinearLayout
        android:id="@+id/linearlayout_personal_scan"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_39"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_9"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_9">

        <ImageView
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@mipmap/scanner" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="二维码扫描"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="6"
            android:background="@null"
            android:ellipsize="none"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/color_base_text"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:src="@mipmap/arraw_right" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_application_layout_dark" />




</LinearLayout>